# RustBolt

./: .gitignore  .prettierignore  .typos.toml  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  THIRD-PARTY-LICENSE  biome.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  x  x.mjs
crates/node_binding/: Cargo.toml  README.md  binding.d.ts  binding.js  browser.js  package.json  rustbolt.wasi-browser.js  rustbolt.wasi.cjs
crates/node_binding/src/: asset.rs  asset_condition.rs  async_dependency_block.rs  chunk.rs  chunk_graph.rs  chunk_group.rs  clean_options.rs  codegen_result.rs  compiler.rs  context_module_factory.rs  dependency.rs  diagnostic.rs  error.rs  exports_info.rs  filename.rs  html.rs  identifier.rs  lib.rs  module.rs  module_graph.rs  module_graph_connection.rs  normal_module_factory.rs  panic.rs  path_data.rs  resolver.rs  resolver_factory.rs  resource_data.rs  rsdoctor.rs  runtime.rs  source.rs  stats.rs  utils.rs
crates/node_binding/src/compilation/: dependencies.rs  entries.rs  mod.rs
crates/node_binding/src/dependencies/: entry_dependency.rs  mod.rs
crates/node_binding/src/fs_node/: node.rs  write.rs
crates/node_binding/src/modules/: concatenated_module.rs  external_module.rs  macros.rs  normal_module.rs
crates/node_binding/src/options/: entry.rs  library.rs  raw_resolve.rs
crates/node_binding/src/plugins/: buildtime_plugins.rs  context_replacement.rs  interceptor.rs  js_cleanup_plugin.rs  js_hooks_plugin.rs  mod.rs
crates/node_binding/src/raw_options/: mod.rs  raw_cache.rs  raw_devtool.rs  raw_dynamic_entry.rs  raw_external.rs  raw_optimization.rs  raw_output.rs  raw_stats.rs
crates/rustbolt/: Cargo.toml
crates/rustbolt/src/: lib.rs
crates/rustbolt/src/builder/: builder_context.rs  mod.rs  target.rs
crates/rustbolt/tests/: basic.rs  defaults.rs  errors.rs  loader.rs
crates/rustbolt/tests/snapshots/: defaults__default_options-2.snap  defaults__default_options.snap  errors__options-2.snap  errors__options.snap
crates/rustbolt_allocator/: Cargo.toml
crates/rustbolt_ast/: Cargo.toml
crates/rustbolt_ast/src/: lib.rs
crates/rustbolt_base64/: Cargo.toml
crates/rustbolt_cacheable/: Cargo.toml
crates/rustbolt_cacheable/src/: lib.rs
crates/rustbolt_cacheable_test/: Cargo.toml
crates/rustbolt_cacheable_test/tests/: context.rs
crates/rustbolt_cacheable_test/tests/macro/: cacheable_dyn.rs  manual_cacheable_dyn.rs  manual_cacheable_dyn_with_generics.rs
crates/rustbolt_cacheable_test/tests/with/: as.rs  as_cacheable.rs  as_inner.rs  as_map.rs  as_owned.rs  as_ref_str.rs  as_string.rs  as_tuple2.rs  as_tuple3.rs  as_vec.rs  inline.rs  unsupported.rs
crates/rustbolt_collections/: Cargo.toml
crates/rustbolt_collections/src/: identifier.rs  ukey.rs
crates/rustbolt_core/: Cargo.toml
crates/rustbolt_core/src/: chunk.rs  chunk_group.rs  concatenated_module.rs  context_module.rs  context_module_factory.rs  dependencies_block.rs  diagnostics.rs  exports_info.rs  external_module.rs  ignore_error_module_factory.rs  init_fragment.rs  lib.rs  module.rs  module_factory.rs  module_profile.rs  normal_module.rs  normal_module_factory.rs  parser_and_generator.rs  raw_module.rs  runtime.rs  runtime_globals.rs  runtime_module.rs  runtime_template.rs  self_module.rs  self_module_factory.rs  ukey.rs
crates/rustbolt_core/src/artifacts/: cgm_hash_artifact.rs  cgm_runtime_requirement_artifact.rs  code_generation_results.rs  mod.rs  side_effects_do_optimize_artifact.rs
crates/rustbolt_core/src/build_chunk_graph/: code_splitter.rs  (+3 more)
crates/rustbolt_error/: Cargo.toml  README.md
crates/rustbolt_error/src/: catch_unwind.rs  diagnostic.rs  error.rs  lib.rs
crates/rustbolt_fs/: Cargo.toml
crates/rustbolt_fs/src/: error.rs  intermediate.rs  memory_fs.rs  native_fs.rs  read.rs  write.rs
crates/rustbolt_futures/: Cargo.toml
crates/rustbolt_futures/src/: scope.rs
crates/rustbolt_hash/: Cargo.toml
crates/rustbolt_hash/src/: lib.rs
crates/rustbolt_hook/: Cargo.toml
crates/rustbolt_hook/src/: lib.rs
crates/rustbolt_ids/: Cargo.toml
crates/rustbolt_ids/src/: deterministic_chunk_ids_plugin.rs  deterministic_module_ids_plugin.rs  id_helpers.rs  named_chunk_ids_plugin.rs  named_module_ids_plugin.rs  natural_chunk_ids_plugin.rs  natural_module_ids_plugin.rs  occurrence_chunk_ids_plugin.rs
crates/rustbolt_loader_lightningcss/: Cargo.toml
crates/rustbolt_loader_lightningcss/src/: config.rs  lib.rs  plugin.rs
crates/rustbolt_loader_react_refresh/: Cargo.toml
crates/rustbolt_loader_react_refresh/src/: lib.rs  plugin.rs
crates/rustbolt_loader_runner/: Cargo.toml  LICENSE
crates/rustbolt_loader_runner/src/: content.rs  context.rs  lib.rs  loader.rs  plugin.rs  runner.rs  scheme.rs
crates/rustbolt_loader_swc/: Cargo.toml  build.rs
crates/rustbolt_loader_swc/src/: compiler.rs  lib.rs  options.rs  plugin.rs  transformer.rs
crates/rustbolt_loader_testing/: Cargo.toml
crates/rustbolt_loader_testing/src/: lib.rs
crates/rustbolt_macros/: Cargo.toml
crates/rustbolt_macros/src/: cacheable_dyn.rs  hook.rs  lib.rs  merge.rs  plugin.rs  runtime_module.rs  rustbolt_version.rs  source_map_config.rs
crates/rustbolt_macros_test/: Cargo.toml
crates/rustbolt_macros_test/tests/: hook.rs  merge.rs  plugin.rs  runtime_module.rs
crates/rustbolt_napi/: Cargo.toml
crates/rustbolt_napi/src/: errors.rs  threadsafe_function.rs
crates/rustbolt_napi_macros/: Cargo.toml
crates/rustbolt_napi_macros/src/: lib.rs  tagged_union.rs
crates/rustbolt_paths/: Cargo.toml
crates/rustbolt_paths/src/: lib.rs
crates/rustbolt_plugin_asset/: Cargo.toml
crates/rustbolt_plugin_asset/src/: asset_exports_dependency.rs  lib.rs
crates/rustbolt_plugin_circular_dependencies/: Cargo.toml
crates/rustbolt_plugin_circular_dependencies/src/: lib.rs
crates/rustbolt_plugin_context_replacement/: Cargo.toml
crates/rustbolt_plugin_context_replacement/src/: lib.rs
crates/rustbolt_plugin_copy/: Cargo.toml
crates/rustbolt_plugin_copy/src/: lib.rs
crates/rustbolt_plugin_css/: Cargo.toml
crates/rustbolt_plugin_css/src/: utils.rs
(+1890 files in other folders)
