[package]
description = "rustbolt ast"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_ast"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"
[dependencies]
anyhow = { workspace = true }
swc_core = { workspace = true, features = [
  "__ecma",
  "__visit",
  "__utils",
  "__ecma_transforms",
  "ecma_ast",
  "ecma_codegen",
  "ecma_quote",
  "common_concurrent",
  "swc_ecma_ast",
  "ecma_transforms_react",
  "ecma_transforms_module",
  "swc_ecma_codegen",
  "swc_ecma_visit",
] }
swc_error_reporters = { workspace = true }
swc_node_comments = { workspace = true }
swc_parallel = { workspace = true, default-features = false }
[package.metadata.cargo-shear]
ignored = ["swc_parallel"]
