[package]
description = "rustbolt_cacheable_test"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_cacheable_test"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino           = { workspace = true }
dashmap          = { workspace = true }
json             = { workspace = true }
lightningcss     = { workspace = true }
once_cell        = { workspace = true }
rustbolt_cacheable = { workspace = true }
rustbolt_resolver  = { workspace = true }
rustbolt_sources   = { workspace = true }
rustc-hash       = { workspace = true }
serde_json       = { workspace = true }
swc_core         = { workspace = true, features = ["ecma_ast"] }
ustr             = { workspace = true }
xxhash-rust      = { workspace = true, features = ["const_xxh64"] }
