[package]
description             = "rustbolt collections"
documentation.workspace = true
edition                 = "2021"
homepage.workspace      = true
license                 = "MIT"
name                    = "rustbolt_collections"
repository.workspace    = true
version                 = "0.2.0"

[dependencies]
dashmap          = { workspace = true }
hashlink         = { workspace = true }
indexmap         = { workspace = true }
rayon            = { workspace = true }
rustbolt_cacheable = { workspace = true }
serde            = { workspace = true, features = ["derive"] }
ustr             = { workspace = true, features = ["serde"] }
