[package]
description = "rustbolt core"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_core"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"
[dependencies]
anymap = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
cow-utils = { workspace = true }
dashmap = { workspace = true, features = ["rayon"] }
derive_more = { workspace = true, features = ["debug"] }
dyn-clone = "1.0.17"
either = { workspace = true }
futures = { workspace = true }
hashlink = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true, features = ["rayon"] }
indoc = { workspace = true }
itertools = { workspace = true }
json = { workspace = true }
mime_guess = { workspace = true }
num-bigint = "0.4.6"
once_cell = { workspace = true }
paste = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
ropey = { workspace = true }
rustbolt_ast = { workspace = true }
rustbolt_cacheable = { workspace = true }
rustbolt_collections = { workspace = true }
rustbolt_dojang = { workspace = true }
rustbolt_error = { workspace = true }
rustbolt_fs = { workspace = true }
rustbolt_futures = { workspace = true }
rustbolt_hash = { workspace = true }
rustbolt_hook = { workspace = true }
rustbolt_loader_runner = { workspace = true }
rustbolt_macros = { workspace = true }
rustbolt_paths = { workspace = true }
rustbolt_regex = { workspace = true }
rustbolt_resolver = { workspace = true }
rustbolt_sources = { workspace = true }
rustbolt_storage = { workspace = true }
rustbolt_util = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sugar_path = { workspace = true }
swc_core = { workspace = true, features = [
  "__ecma",
  "__visit",
  "__utils",
  "__ecma_transforms",
  "ecma_ast",
  "ecma_parser",
  "ecma_codegen",
  "ecma_quote",
  "common_concurrent",
  "swc_ecma_ast",
  "ecma_transforms_react",
  "ecma_transforms_module",
  "swc_ecma_codegen",
  "swc_ecma_visit",
] }
swc_node_comments = { workspace = true }
swc_parallel = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
ustr = { workspace = true }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }

[lints]

workspace = true
[package.metadata.cargo-shear]
ignored = ["swc_parallel"]
