[package]
description = "rustbolt fs"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_fs"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"

[dependencies]
async-trait  = { workspace = true }
dunce        = { version = "1.0.5" }
pnp          = { version = "0.9.0" }
rustbolt_error = { path = "../rustbolt_error", version = "0.2.0" }
rustbolt_paths = { path = "../rustbolt_paths", version = "0.2.0" }
tokio        = { workspace = true, features = ["rt", "macros", "sync"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "fs"] }

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }
