[package]
description = "rustbolt futures"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_futures"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"

[dependencies]
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
