[package]
description = "rustbolt hash"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_hash"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"

[dependencies]
data-encoding    = { version = "2.6.0" }
md4              = "0.10.2"
rustbolt_cacheable = { workspace = true }
smol_str         = { workspace = true }
xxhash-rust      = { workspace = true, features = ["xxh64"] }
