[package]
description = "rustbolt id implementation"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_ids"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools          = { workspace = true }
rayon              = { workspace = true }
regex              = { workspace = true }
rustbolt_collections = { workspace = true }
rustbolt_core        = { workspace = true }
rustbolt_error       = { workspace = true }
rustbolt_hook        = { workspace = true }
rustbolt_util        = { workspace = true }
rustc-hash         = { workspace = true }
tracing            = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["tracing"]
