[package]
description = "rustbolt lightingcss loader"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_loader_lightningcss"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait          = { workspace = true }
derive_more          = { workspace = true, features = ["debug"] }
lightningcss         = { workspace = true, features = ["sourcemap", "browserslist", "visitor", "into_owned"] }
parcel_sourcemap     = { workspace = true }
rustbolt_cacheable     = { workspace = true }
rustbolt_core          = { workspace = true }
rustbolt_error         = { workspace = true }
rustbolt_hook          = { workspace = true }
rustbolt_loader_runner = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
tokio                = { workspace = true }
