[package]
description = "rustbolt react refresh loader"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_loader_react_refresh"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait          = { workspace = true }
rustbolt_cacheable     = { workspace = true }
rustbolt_core          = { workspace = true }
rustbolt_error         = { workspace = true }
rustbolt_hook          = { workspace = true }
rustbolt_loader_runner = { workspace = true }
