[package]
description = "rustbolt loader test"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_loader_testing"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait          = { workspace = true }
rustbolt_cacheable     = { workspace = true }
rustbolt_core          = { workspace = true }
rustbolt_error         = { workspace = true }
rustbolt_loader_runner = { workspace = true }
serde_json           = { workspace = true }
