[package]
description = "rustbolt napi"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_napi"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi         = { workspace = true, features = ["async", "tokio_rt", "serde-json", "napi4", "anyhow"] }
oneshot      = "0.1.8"
rustbolt_error = { workspace = true }
tokio        = { workspace = true, features = ["sync"] }
