
[package]
description = "rustbolt macros plugin"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_napi_macros"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"
[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true, features = ["full"] }
