[package]
description = "rustbolt asset plugin"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_plugin_asset"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait      = { workspace = true }
mime_guess       = { workspace = true }
rayon            = { workspace = true }
rustbolt_base64    = { workspace = true }
rustbolt_cacheable = { workspace = true }
rustbolt_core      = { workspace = true }
rustbolt_error     = { workspace = true }
rustbolt_hash      = { workspace = true }
rustbolt_hook      = { workspace = true }
rustbolt_util      = { workspace = true }
serde_json       = { workspace = true }
tracing          = { workspace = true }
urlencoding      = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["tracing"]
