[package]
description = "rustbolt circular dependency detection plugin"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_plugin_circular_dependencies"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"

[dependencies]
cow-utils          = { workspace = true }
derive_more        = { workspace = true, features = ["debug"] }
futures            = { workspace = true }
itertools          = { workspace = true }
rustbolt_collections = { workspace = true }
rustbolt_core        = { workspace = true }
rustbolt_error       = { workspace = true }
rustbolt_hook        = { workspace = true }
rustbolt_regex       = { workspace = true }
tracing            = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["tracing"]
