[package]
description = "rustbolt context replacement plugin"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_plugin_context_replacement"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"

[dependencies]
rustbolt_core  = { workspace = true }
rustbolt_error = { workspace = true }
rustbolt_hook  = { workspace = true }
rustbolt_paths = { workspace = true }
rustbolt_regex = { workspace = true }
rustc-hash   = { workspace = true }
tracing      = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["tracing"]
