[package]
description = "rustbolt copy plugin"
edition     = "2021"
license     = "MIT"
name        = "rustbolt_plugin_copy"
repository  = "https://github.com/khulnasoft/rustbolt"
version     = "0.2.0"
[dependencies]
dashmap      = { workspace = true }
derive_more  = { workspace = true, features = ["debug"] }
futures      = { workspace = true }
glob         = { workspace = true }
pathdiff     = { workspace = true, features = ["camino"] }
regex        = { workspace = true }
rustbolt_core  = { workspace = true }
rustbolt_error = { workspace = true }
rustbolt_hash  = { workspace = true }
rustbolt_hook  = { workspace = true }
rustbolt_paths = { workspace = true }
rustbolt_util  = { workspace = true }
rustc-hash   = { workspace = true }
sugar_path   = { workspace = true }
tracing      = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["fs"] }

[package.metadata.cargo-shear]
ignored = ["tracing"]
